code/tui/snapshots/fullscreen/session_manager/agents_manager_open_unfocused.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                                    [Dashboard]

  Idle (1)
  ○ Snapshot session
  Archived (0)






















  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Esc to return
