code/tui/snapshots/fullscreen/session_manager/dashboard_after_escape.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                                    [Dashboard]


























  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
  ⏸ Manual
  Enter send  ·  ← Dashboard  ·  shift+tab mode  ·  shift+↓/↑ effort
